--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.13.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
@@ -32,6 +33,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "prettier": "3.2.5",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
