--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@mantine/dates": "^7.9.1",
     "@mantine/form": "^7.9.1",
     "@mantine/hooks": "^7.9.1",
-    "@prisma/client": "5.13.0",
+    "@prisma/client": "^5.15.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
@@ -38,7 +38,7 @@
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "3.2.5",
-    "prisma": "^5.13.0",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
